--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -156,6 +156,10 @@ body {
   height: 100%;
 }
 
+.nav > li > a {
+  padding: 10px 10px;
+}
+
 li a.navbar-animated-link {
   -moz-transition: height 0.3s;
   -o-transition: height 0.3s;
@@ -257,6 +261,12 @@ ul.dropdown-menu > li.active > a:hover, ul.dropdown-menu > li.active > a:focus, 
 
 .navbar-fixed-top .navbar-collapse {
   max-height: 100vh;
+  background-color: #fff;
+}
+.navbar-fixed-top .navbar-collapse.in {
+  -moz-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 }
 
 .navbar-default .navbar-toggle {
@@ -269,13 +279,13 @@ ul.dropdown-menu > li.active > a:hover, ul.dropdown-menu > li.active > a:focus, 
   background-color: #0090CD;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 992px) {
   body {
     padding-top: 0;
   }
 
   .navbar-fixed-top {
-    position: static;
+    position: inherit;
     margin-bottom: 0;
   }
 
